--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1709,107 +1709,107 @@ stories:
   domain: http://www.silverstar.com/independent/
   link: https://www.silverstar.com/2019/10/techtalk-iottie/
 images:
-- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-- name: christianity-christianity-under-construction-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-two.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
-- name: berlinwall2-berlinwall-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-hot-spicy.jpg
-- name: razorcliff-razorcliff-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-post-modern.jpg
-- name: trucksilo-trucksilo-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-rainbow-festival.jpg
-- name: downtown-trucksilo-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-wols.jpg
-- name: old-granary-field-oldhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
-- name: rockingchair-rockingchair-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-ww2-dresden.jpg
-- name: old-house-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-blocks.jpg
-- name: ellis-island-ellisisland-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-clean-view.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: copper-circuit-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-la_36349151230_o.jpg
-- name: old-house-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
-- name: berlinwall-DSC-0084-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sunday.jpg
-- name: index.json
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/index.json
-- name: curtain-curtain-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-diego-rivera1.jpg
-- name: old-door-lock-old-door-lock-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-free-woman.jpg
-- name: bluelake-clean-view-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
-- name: old-granary-field-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
-- name: gypsymosaic-gypsy-eyes-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sunday.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-- name: stories-castle-on-hill-edinburgh-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-blue-circuit.JPG
-- name: copper-circuit-full-stack-woodpile.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-full-stack-woodpile.jpg
-- name: rockingchair-rockingchair-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-asteroids.jpg
-- name: nyc-flag-nycflag-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
-- name: border-fence-border-fence-on-hill-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-two.jpg
-- name: downtheline-downtheline-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-granite.jpg
-- name: oldsmallboat-oldsmallboat-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crabapple.jpg
-- name: old-cabin-oldcabin-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-pablo-blue.jpg
-- name: bluelake-green-zuma-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-38-67.jpg
-- name: copper-circuit-border-crossing-through-fence-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-crossing-through-fence-2.jpg
-- name: stories-machine-road-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-copper-circuit.jpg
-- name: oldcabin-store-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colored-circuits.jpg
-- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
-- name: stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-- name: aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-- name: oldcabin-store-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-emily-carr.jpg
-- name: nazi-invasion-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-remington-typewriter.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: oldroad-old-road-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kandinsky-bv.jpg
-- name: rain-princess-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-butterfly-purple-flower.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: beach-rocks-beach-rocks-currents-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit.jpg
-- name: white-house-lawn-white-house-lawn-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-paper.jpg
-- name: stories-new-64-185-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-64-185-800-500-0-max-0-1--1.jpg
-- name: aws-s3-stories-fredericksburg-downtown-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fredericksburg-downtown-flag.jpg
-- name: yosemite-yosemite-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-constitution.jpg
-- name: aws-s3-stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-- name: udnie-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
+- name: razorwire-DSC-0080-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dry-skin.jpg
+- name: yosemite-yosemite-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-cinnamon-rolls.jpg
+- name: windowmountain-window-mountain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-matrix.jpg
+- name: amusement-park-amusement-park-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-brush.jpg
+- name: nazi-invasion-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-lincoln-memorial_36690528196_o.jpg
+- name: liberty-back-statue-liberty-back-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
+- name: stories-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-clean-view.jpg
+- name: birdhouse-birdhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
+- name: old-granary-field-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
+- name: crow_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_cinnamon_rolls.jpg
+- name: old-house-oldhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gred-mash.jpg
+- name: trucksilo-trucksilo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-matrix.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
+- name: powerlines-power-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-aqua.jpg
+- name: razorcliff-razorcliff-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-umberto-bocc.jpg
+- name: status-berlin-status-berlin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crafty-painting.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
+- name: old-barn-old-barn-1500-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-deep-connections.jpg
+- name: border-crossing-bordercrossing-graham-sutherland.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-graham-sutherland.png
+- name: oldhotel-oldhotel-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
+- name: nazi-invasion-whie-house-close-up-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-whie-house-close-up-2.jpg
+- name: castle-wall-DSC-0067-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crunch-paper.JPG
+- name: nyc-flag-nycflag-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-missle.jpg
+- name: adam-smith-adam-smith-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colored-circuits.jpg
+- name: nazi-invasion-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dandelions-in-rocks.jpg
+- name: fence-mexico-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-three.jpg
+- name: stalin-time-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-los-angeles-downtown-from-afar.jpg
+- name: old-school-house-old-schoolhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-collage.jpg
+- name: fence-mexico-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-storm.jpg
+- name: mosaic-face-mosaic-face-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-neo-instinct.jpg
+- name: stalin-time-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cruise-ship-shore-log.jpg
+- name: lincoln-memorial-lincolnmemorial-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dry-skin.jpg
+- name: blossombar-blue-granite-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-24-99.jpg
+- name: fence-mexico-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crafty-painting.jpg
+- name: legal-statue-legalstatue-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colorful-blocks.jpg
+- name: old-cabin-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
+- name: gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
+- name: copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+- name: braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-comuter-wheels-crypto.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: locked-up-steam-lock-up-steam-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-mucha-mult.jpg
+- name: stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
+- name: abandonedbuildings_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_bright_sand.jpg
+- name: aws-s3-canyon-canyon-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
+- name: mistywoods-babyfoot-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-dali.jpg
+- name: nyc-flag-nycflag-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-mucha-mult.jpg
+- name: old-granary-field-granaryfield-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-oily-mcoilface.jpg
+- name: white-house-lawn-white-house-window-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-emily-carr.jpg
+- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+- name: copper-circuit-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
+- name: downtown-los-angeles-downtown-la-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
 ---
 Rejoice In This Holy Night.&nbsp;Without Access To Costly Opioids, Rwanda Makes Own Morphine.&nbsp;American Red Cross Blood Drives In Pickaway.&nbsp;Measles Detected At Multiple Major Airports Over The Holidays.&nbsp;Wellness Sushi Brings Vegan Sushi To Denver.&nbsp;And His Name Shall Be Called Wonderful.&nbsp;Ruanda Apuesta Por Morfina Barata Para Combatir El Dolor.&nbsp;HPEs Commitment To Protecting Human Rights.&nbsp;
